# datathon2025-smadex

./: .gitignore  README.md  main.py  pablo.py  pyproject.toml
extra/: datathon_missings.csv
models/: embeddings_mappings.json  scaler.joblib
notebooks/: base_pipeline.ipynb  eda.ipynb  final.ipynb  ft_transformer.ipynb  pablo.ipynb  pipeline.ipynb  presentacio.ipynb  split.ipynb  test.ipynb
pablo/: embeddings_mappings.json  model_checkpoint.pth_1  model_checkpoint.pth_2  model_checkpoint.pth_3  model_checkpoint_v1_1.pth  model_checkpoint_v1_2.pth  model_checkpoint_v1_3.pth  model_checkpoint_v1_4.pth  pablo.ipynb  pablo.py  scaler.joblib
