[project]
name = "datathon2025-smadex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[complete,diagnostics]>=2025.11.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
]
